--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,6 @@
 					<configuration>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
-
 						<annotationProcessorPaths>
 							<path>
 								<groupId>org.mapstruct</groupId>
@@ -125,8 +124,13 @@
 						</annotationProcessorPaths>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
+
 
 </project>
