--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,9 @@
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<mainClass>net.vrakin.medsalary.MedsalaryApplication</mainClass>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
