Set Main-class2

--- a/pom.xml
+++ b/pom.xml
@@ -124,15 +124,17 @@
 						</annotationProcessorPaths>
 					</configuration>
 				</plugin>
-				<plugin>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-maven-plugin</artifactId>
-					<configuration>
-						<mainClass>net.vrakin.medsalary.MedsalaryApplication</mainClass>
-					</configuration>
-				</plugin>
 			</plugins>
 		</pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>net.vrakin.medsalary.MedsalaryApplication</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 
 
