--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.servlet.multipart.max-request-size=20MB
 storage.uploadDir=src/main/resources/upload-dir
 storage.decryptionFileName=decryption
 storage.correctiveFileName=corrective
+
+logging.level.net.vrakin.medsalary.service.SecurityUserServiceImp=TRACE
