--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 		<url/>
 	</scm>
 	<properties>
+		<maven.compiler.source>22</maven.compiler.source>
+		<maven.compiler.target>22</maven.compiler.target>
 		<java.version>21</java.version>
 		<modelmapper.version>3.1.1</modelmapper.version>
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
