Modefied calculating out table but it is empty

--- a/src/main/resources/application-work.properties
+++ b/src/main/resources/application-work.properties
@@ -1,6 +1,6 @@
 #SPRING_PROFILES_ACTIVE=work
-spring.datasource.url=jdbc:mysql://localhost:3306/med_salary?characterEncoding=utf8&serverTimezone=Europe/Kiev
+spring.datasource.url=jdbc:mysql://localhost:3306/medsalary?characterEncoding=utf8&serverTimezone=Europe/Kiev
 spring.datasource.username=de_manager
-spring.datasource.password=lz$c2x.EC1{bn%}
+spring.datasource.password=lz$c2x.EC1{bn%}d
 
 
