--- a/pom.xml
+++ b/pom.xml
@@ -178,7 +178,14 @@
 					<mainClass>net.vrakin.medsalary.MedsalaryApplication</mainClass>
 				</configuration>
 			</plugin>
-
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
+				<configuration>
+					<forkCount>0</forkCount>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
