application.properties for db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.servlet.multipart.max-request-size=20MB
 storage.uploadDir=src/main/resources/upload-dir
 storage.decryptionFileName=decryption
 storage.correctiveFileName=corrective
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
