--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 storage.uploadDir=src/main/resources/upload-dir
+storage.workDir=src/main/resources/work-dir
 storage.decryptionFileName=decryption
 storage.correctiveFileName=corrective
