--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=medsalary
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=false
+#spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
@@ -10,3 +9,7 @@ storage.uploadDir=src/main/resources/upload-dir
 storage.workDir=src/main/resources/work-dir
 storage.decryptionFileName=decryption
 storage.correctiveFileName=corrective
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+spring.liquibase.enabled=true
