added period department, timesheet and delete vlt_time in timesheet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ storage.workDir=src/main/resources/work-dir
 storage.decryptionFileName=decryption
 storage.correctiveFileName=corrective
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 spring.liquibase.enabled=true
