javadoc dto, excel, exception, generator, mapper, repository, service before ResultServiceImpl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.liquibase.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.devtools.restart.exclude=static/**,templates/**
+spring.main.allow-circular-references=true
